---------------------------------------------------------------------------------------------------
Version: 5.1.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.1.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 5.0.7
Date: 2020-11-05
  Changes:
    - When using LTN and the train is moving to a temporary station it displays the next station in the schedule instead
---------------------------------------------------------------------------------------------------
Version: 5.0.6
Date: 2020-10-27
  Changes:
    - Proper error message when trying to remote control a train and an error happens
    - Players stop remote controlling a train when disconnecting in multiplayer
---------------------------------------------------------------------------------------------------
Version: 5.0.5
Date: 11. 08. 2020
  Bugfixes:
    - Fixed huge UPS drop when deconstructing a lot of trains by robots
---------------------------------------------------------------------------------------------------
Version: 5.0.4
Date: 28. 07. 2020
  Bugfixes:
    - Fixed alert message for temporary stations
---------------------------------------------------------------------------------------------------
Version: 5.0.3
Date: 18. 06. 2020
  Changes:
    - Added station names to the alert when a train takes too long between stations
---------------------------------------------------------------------------------------------------
Version: 5.0.2
Date: 24. 05. 2020
  Changes:
    - Use builtin events where possible
---------------------------------------------------------------------------------------------------
Version: 5.0.1
Date: 22. 02. 2020
  Bugfixes:
    - Fixed error with pasting entity settings