@@ -2,6 +2,7 @@
 Version: 5.1.1
 Date: ????
   Changes:
+    - Moved the top button into the mod button frame
 ---------------------------------------------------------------------------------------------------
 Version: 5.1.0
 Date: 2020-11-23
